add more tests for copies